--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,6 @@
-@import "foundation_and_overrides";
+@import "framework/foundation_and_overrides";
+
+@import "base/variable";
+@import "base/mix_in";
+
+@import "sign_in/layout";
