--- a/app/views/layouts/sign_in.html.erb
+++ b/app/views/layouts/sign_in.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Alert system" %></title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -12,9 +12,7 @@
   </head>
 
   <body>
-
-    <%= yield %>
-    <%= render 'layouts/signed_in_bar' %>
+    <div class='sign-in'> <%= yield %> </div>
     <%= javascript_include_tag "application" %>
   </body>
 </html>
