--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,7 @@
 
 @import "base/variable";
 @import "base/mix_in";
+@import "base/object";
 
 @import "sign_in/layout";
+@import "application/layout";
