--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-
+    <%= render "layouts/nav_bar" %>
+    <%= flash_messages %>
     <%= yield %>
     <%= render 'layouts/signed_in_bar' %>
     <%= javascript_include_tag "application" %>
