--- a/app/assets/stylesheets/base/mix_in.scss
+++ b/app/assets/stylesheets/base/mix_in.scss
@@ -4,3 +4,10 @@
       -ms-border-radius: $radius;
           border-radius: $radius;
 }
+
+@mixin form-inline($width) {
+  label {
+    width: $width;
+    margin-right: 0.5em;
+  }
+}
