--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
   <%= link_to 'New User', new_user_path() %>
 <% end %>
 
-<table>
+<table class='table'>
   <thead>
     <tr>
       <td>Login</td>
