--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -1,21 +1,3 @@
-// .input {
-//   label {
-//     display: block;
-//     float: left;
-//     max-width: 220px;
-//   }
-
-//   input {
-//     margin-left: 240px;
-//   }
-
-// }
-
-.form {
-  max-width: 600px;
-  margin: 0 auto;
-}
-
 .alert-animate {
   position: absolute;
   left: 50%;
@@ -37,4 +19,32 @@
 label.required abbr{
   color: red;
   font-weight: bold;
+}
+
+form {
+  max-width: 600px;
+  padding: 20px;
+}
+
+.input-row {
+  margin-bottom: 15px;
+}
+
+label.inline {
+  display: inline;
+  width: auto !important
+}
+
+.form {
+  @include form-inline(10em);
+}
+
+.typeahead {
+  z-index: 1051;
+}
+
+.empty-message{
+  padding: 0 15px;
+  color: red;
+
 }
