--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -1,7 +1,7 @@
 <div>
   <%= link_to "Setting", "" %> |
   <%= link_to "Alerts", "" %> |
-  <%= link_to "Members", "" %> |
-  <%= link_to "Groups", "" %> |
+  <%= link_to "Members", members_path %> |
+  <%= link_to "Groups", groups_path %> |
   <%= link_to "Users", users_path %>
 </div>
