--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,18 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Alert system" %></title>
 
     <%= stylesheet_link_tag    "application" %>
-    <%= javascript_include_tag "vendor/modernizr" %>
     <%= csrf_meta_tags %>
   </head>
 
   <body>
-    <%= render "layouts/nav_bar" %>
-    <%= flash_messages %>
-    <%= yield %>
-    <%= render 'layouts/signed_in_bar' %>
+    <div class='container'>
+      <%= render "layouts/nav_bar" %>
+      <%= flash_messages %>
+      <%= yield %>
+      <%= render 'layouts/signed_in_bar' %>
+    </div>
+
     <%= javascript_include_tag "application" %>
   </body>
 </html>
