membership associate with member and group

--- a/app/assets/stylesheets/application/layout.scss
+++ b/app/assets/stylesheets/application/layout.scss
@@ -15,3 +15,19 @@
 .input-row {
   margin-bottom: 15px;
 }
+
+.input-inline {
+  margin-left: 20px !important;
+  margin-right: 5px !important;
+  margin-top: -3px !important;
+}
+.form-association {
+  max-width: 540px;
+}
+
+.main-nav {
+  background-color: whiteSmoke;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid white;
+  text-align: center;
+}
