--- a/app/views/groups/_search_member.html.erb
+++ b/app/views/groups/_search_member.html.erb
@@ -10,7 +10,7 @@
     </span>
   </div>
 
-  <input id='group-member-value' 
+  <input id='member-value' 
          type='hidden'
          value=''
          data-url='<%=memberships_path() %>'
