--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -6,12 +6,12 @@
 <table class='table'>
   <thead>
     <tr>
-      <th>Full Name</th>
-      <th>Email</th>
-      <th>Number</th>
-      <th>Email Alert</th>
-      <th>SMS Alert</th>
-      <th>Action</th>
+      <td>Full Name</td>
+      <td>Email</td>
+      <td>Number</td>
+      <td>Email Alert</td>
+      <td>SMS Alert</td>
+      <td>Action</td>
     </tr>
   </thead>
   <tbody>
