--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,16 +6,17 @@
 <table class='table'>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Action</th>
+      <td>Name</td>
+      <td>Description</td>
+      <td>Action</td>
     </tr>
   </thead>
+
   <tbody>
     <% @groups.each do |group| %>
       <tr>
         <td><%= link_to group.name, edit_group_path(group) %></td>
-        <td><%=group.description %></td>
+        <td><%= truncate(group.description) %></td>
         <td>
            <%= link_to "Delete", group_path(group), method: :delete, data: { confirm: 'Are you sure to delete this group' } %>
         </td>
