--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -1,7 +1,41 @@
-<div>
-  <%= link_to "Setting", "" %> |
-  <%= link_to "Alerts", "" %> |
-  <%= link_to "Members", members_path %> |
-  <%= link_to "Groups", groups_path %> |
-  <%= link_to "Users", users_path %>
-</div>
+<nav class='navbar navbar-fixed-top main-nav'>
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class='glyphicon glyphicon-align-justify'></span>
+      </button>
+      <a class="navbar-brand" href="#"> <%= ENV['APP_NAME'] %> </a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><%= link_to "Setting", "" %></li>
+        <li><%= link_to "Alerts", "" %> </li>
+        <li><%= link_to "Members", members_path %></li>
+        <li><%= link_to "Groups", groups_path %></li>
+        <li><%= link_to "Users", users_path %></li>
+      </ul>
+
+      <% if current_user %>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+             <%= current_user.user_name %> <span class="caret"> </span>
+          </a>
+
+          <ul class="dropdown-menu" role="menu">
+            <li><%= link_to 'Profile', sign_out_path(), method: :delete %></li>
+            <li class="divider"></li>
+            <li><%= link_to 'Sign out', sign_out_path(), method: :delete %></li>
+            
+          </ul>
+        </li>
+      </ul>
+      <% end %>
+    </div><!-- /.navbar-collapse -->
+
+  </div>
+
+</nav>
