--- a/app/views/memberships/_members.html.erb
+++ b/app/views/memberships/_members.html.erb
@@ -1,20 +1,22 @@
 
 <% if group.memberships.size > 0 %>
   <table class='table'>
-    <tr>
-      <td>Full Name</td>
-      <td>Email</td>
-      <td>Phone</td>
-      <td></td>
-    </tr>
+    <thead>
+      <tr>
+        <td>Full Name</td>
+        <td>Email</td>
+        <td>Phone</td>
+        <td></td>
+      </tr>
+    </thead>
 
     <tbody>
       <% group.memberships.each do |membership| %>
-        <tr>
+        <tr id='membership-<%=membership.id%>'>
           <td><%= membership.member.full_name %></td>
           <td><%= membership.member.email %></td>
           <td><%= membership.member.phone %></td>
-          <td><%= link_to 'Remove', membership_path(membership.id), class: 'remove-membership' %></td>
+          <td><%= link_to 'Remove', membership_path(membership.id), class: 'remove-member', data: {id: membership.id} %></td>
         </tr>
       <% end %>
     </tbody>
