--- a/app/assets/stylesheets/application/layout.scss
+++ b/app/assets/stylesheets/application/layout.scss
@@ -21,6 +21,13 @@
   margin-right: 5px !important;
   margin-top: -3px !important;
 }
+
+.input-inline-collection {
+  margin-left: 6px !important;
+  margin-right: 5px !important;
+  margin-top: -3px !important;
+}
+
 .form-association {
   max-width: 540px;
 }
