--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -24,6 +24,9 @@ label.required abbr{
 form {
   max-width: 600px;
   padding: 20px;
+  label {
+    font-weight: 500;
+  }
 }
 
 .input-row {
@@ -33,6 +36,10 @@ form {
 label.inline {
   display: inline;
   width: auto !important
+}
+
+.inline-short {
+  width: 6em !important;
 }
 
 .form {
@@ -46,5 +53,9 @@ label.inline {
 .empty-message{
   padding: 0 15px;
   color: red;
+}
 
+.input-row-close{
+  margin-top: -15px;
+  margin-bottom: 15px;
 }
