--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -5,21 +5,21 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class='glyphicon glyphicon-align-justify'></span>
       </button>
-      <a class="navbar-brand" href="#"> <%= ENV['APP_NAME'] %> </a>
+      <%=link_to ENV['APP_NAME'], root_path, class: 'navbar-brand' %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to "Setting", "" %></li>
-        <li><%= link_to "Alerts", "" %> </li>
-        <li><%= link_to "Members", members_path %></li>
-        <li><%= link_to "Groups", groups_path %></li>
-        <li><%= link_to "Users", users_path %></li>
       </ul>
 
       <% if current_user %>
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Alerts", alerts_path %> </li>
+        <li><%= link_to "Members", members_path %></li>
+        <li><%= link_to "Groups", groups_path %></li>
+        <li><%= link_to "Users", users_path %></li>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
              <%= current_user.user_name %> <span class="caret"> </span>
