--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -4,6 +4,7 @@
 <%= render 'form' %>
 
 <div class='form-association'>
+  <h4 class='sub-title'> Registering member </h4>
   <%= render 'search_member' %>
 
   <div id='member-list'>
