--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -2,7 +2,9 @@
 <%= page_header "Edit Member" %>
 
 <%= render 'form' %>
+
 <div class='form-association'>
+  <h4 class='sub-title'> Registering groups</h4>
   <%= render 'search_group' %>
 
   <div id='group-list'>
