Handle Feed search in background

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -19,7 +19,7 @@
     <% @alerts.each do |alert| %>
       <tr>
         <td><%= link_to alert.name, edit_alert_path(alert) %></td>
-        <td><%= truncate(alert.url) %></td>
+        <td><%= alert.url %></td>
         <td><%= truncate(alert.keywords.map(&:name).join(",")) %></td>
         <td>
            <%= link_to "Delete", alert_path(alert), method: :delete, data: { confirm: 'Are you sure to delete this alert' } %>
