--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -5,13 +5,13 @@
 <% end %>
 
 
-<table class='table'>
+<table class='table panel'>
   <thead>
     <tr>
       <td>Name</td>
       <td>Url</td>
       <td>Keywords</td>
-      <td>Action</td>
+      <td width="60">Action</td>
     </tr>
   </thead>
 
