--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -3,7 +3,7 @@
   <%= link_to 'New Member', new_member_path() %>
 <% end %>
 
-<table class='table'>
+<table class='table panel'>
   <thead>
     <tr>
       <td>Full Name</td>
@@ -11,7 +11,7 @@
       <td>Number</td>
       <td>Email Alert</td>
       <td>SMS Alert</td>
-      <td>Action</td>
+      <td width="60">Action</td>
     </tr>
   </thead>
   <tbody>
