--- a/app/views/memberships/_members.html.erb
+++ b/app/views/memberships/_members.html.erb
@@ -1,6 +1,6 @@
 
 <% if group.memberships.size > 0 %>
-  <table class='table'>
+  <table class='table panel'>
     <thead>
       <tr>
         <td>Full Name</td>
