--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
   <%= link_to 'New User', new_user_path() %>
 <% end %>
 
-<table class='table'>
+<table class='table panel'>
   <thead>
     <tr>
       <td>Login</td>
@@ -11,7 +11,7 @@
       <td>Email</td>
       <td>Number</td>
       <td>Role</td>
-      <td>Action</td>
+      <td width="60">Action</td>
     </tr>
   </thead>
   <tbody>
