--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -1,6 +1,18 @@
 body {
   padding-top: 60px;
 }
+
+thead td {
+  font-weight: bold;
+  opacity: 0.8;
+}
+
+table {
+  @include border-radius(4px);
+  border: 1px solid #eee !important;
+  margin: 15px 0px !important;
+}
+
 @media (max-width: 979px) {
   body {
     padding-top: 0px;
