--- a/app/views/alerts/_alert_groups.html.erb
+++ b/app/views/alerts/_alert_groups.html.erb
@@ -1,13 +1,23 @@
-<div id='alert-group' >
-  <div class="input-group">
-    <input type="text" 
-          class="form-control typeahead" placeholder="Group"
-          data-url="<%= new_groups_alert_path(@alert) %>" >
+<div style='max-width: 500px;'>
+  <h3 class='header-title'> Alert Groups </h3>
 
-    <span class="input-group-btn">
-      <%= link_to "Add Group", alert_alert_groups_path(@alert), class: 'btn btn-default typeahead-add' %>
-    </span>
+  <div id='alert-group' >
+    <div class="input-group">
+      <input type="text" 
+            class="form-control typeahead" placeholder="Group"
+            id="alert-group-typeahead"
+            data-url="<%= new_groups_alert_path(@alert) %>" >
+
+      <span class="input-group-btn">
+        <%= link_to "Add Group", alert_alert_groups_path(@alert), class: 'btn btn-default typeahead-add', id: 'add-alert-group' %>
+      </span>
+    </div>
+
+    <input type='hidden' id='alert-group-value' >
   </div>
 
-  <input type='hidden' class='typeahead-value' >
+  <div id='alert-group-list'>
+    <%= render 'alert_groups/groups', alert: @alert %>
+  </div>
+
 </div>
