--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,12 +3,12 @@
   <%= link_to 'New Group', new_group_path() %>
 <% end %>
 
-<table class='table'>
+<table class='table panel'>
   <thead>
     <tr>
       <td>Name</td>
       <td>Description</td>
-      <td>Action</td>
+      <td width="60">Action</td>
     </tr>
   </thead>
 
