--- a/app/views/memberships/_groups.html.erb
+++ b/app/views/memberships/_groups.html.erb
@@ -1,5 +1,5 @@
 <% if member.memberships.size > 0 %>
-  <table class='table'>
+  <table class='table panel'>
    <thead>
       <tr>
         <td>Name</td>
