--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>ZURBemails</title>
+<title>Alert Mail</title>
 
 <%= stylesheet_link_tag    "mailer" %>
 
@@ -23,7 +23,6 @@
         <table bgcolor="#999999">
           <tr>
             <td><img src="http://placehold.it/200x50/" /></td>
-            <td align="right"><h6 class="collapse">Basic</h6></td>
           </tr>
         </table>
         </div>
