--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -2,9 +2,14 @@ body {
   padding-top: 60px;
 }
 
-thead td {
-  font-weight: bold;
-  opacity: 0.8;
+thead{
+  tr {
+    background: #eee;
+  }
+  td {
+    font-weight: bold;
+    opacity: 0.8;
+  }
 }
 
 table {
