--- a/app/assets/stylesheets/mailer/email.scss
+++ b/app/assets/stylesheets/mailer/email.scss
@@ -205,6 +205,9 @@ ul.sidebar li a h1,ul.sidebar li a h2,ul.sidebar li a h3,ul.sidebar li a h4,ul.s
 /* Be sure to place a .clear element after each set of columns, just to be safe */
 .clear { display: block; clear: both; }
 
+h2,h3,h4 {
+  margin-bottom: 5px !important;
+}
 
 /* ------------------------------------------- 
     PHONE
