--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -8,8 +8,8 @@
     <%=f.input :description, input_html: {class: 'form-control'} %>
   </div>
   
-  <div class='input-row'>
+  <div class='form-group form-action-group'>
     <label></label>
-    <%=f.submit 'Save', label: false, class: 'btn btn-primary form-control' %>
+    <%=f.submit 'Save', label: false, class: 'btn btn-primary' %>
   </div>
 <% end %>
