--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <%= paginate_for(@users) %>
 <%= page_header "List user" do %>
-  <%= link_to 'New User', new_user_path() %>
+  <%= link_new 'New User', new_user_path() %>
 <% end %>
 
 <table class='table panel'>
@@ -11,7 +11,7 @@
       <td>Email</td>
       <td>Number</td>
       <td>Role</td>
-      <td width="60">Action</td>
+      <td class='td-last'>Action</td>
     </tr>
   </thead>
   <tbody>
@@ -24,7 +24,8 @@
         <td><%=user.role%></td>
         <td>
           <% if !user.is_admin? %>
-           <%= link_to "Delete", user_path(user), method: :delete, data: { confirm: 'Are you sure to delete' } %>
+           <%= link_edit " ", edit_user_path(user)  %>
+           <%= link_destroy " ", user_path(user), method: :delete, data: { confirm: 'Are you sure to delete' } %>
           <% end %>
         </td>
       </tr>
