--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -75,3 +75,18 @@ label.inline {
   font-size: 120%;
   font-weight: bold;
 }
+.color-danger {
+  color: $color-danger;
+}
+.color-primary {
+  color: $color-primary;
+}
+.btn-icon {
+  padding: 5px;
+  &:hover{
+    text-decoration: none;
+  }
+}
+.td-last {
+  width: 80px;
+}
