--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -4,7 +4,7 @@ body {
 
 thead{
   tr {
-    background: #eee;
+    background: #fff;
   }
   td {
     font-weight: bold;
@@ -18,8 +18,61 @@ table {
   margin: 15px 0px !important;
 }
 
-@media (max-width: 979px) {
-  body {
-    padding-top: 0px;
+.form-control {
+  padding: 6px;
+}
+
+.form {
+  label {
+    width: 12em !important;
+  }
+  .help-block {
+    margin-left: 12.5em; // label width 12em plus margin-left 0.5em
+    margin-top: 0px;
+  }
+  .form-action-group {
+    padding-top: 25px;
   }
 }
+.inline {
+  display: inline;
+}
+
+.list-header {
+  // padding: 0px 10px;
+  // background: #fff;
+  // border: 1px solid #eee;
+
+  h3 {
+    margin: 10px 0 !important;
+  }
+  .right {
+    margin-top: 5px;
+    a {
+      font-weight: bold;
+    }
+  }
+
+}
+
+.form-inline{
+  .form-group{
+    margin: 10px 0px !important;
+    display: block;
+  }
+  .form-control {
+    width: 18em;
+  }
+  .cb-block {
+    .checkbox {
+      margin-left: 11em;
+    }
+  }
+}
+
+
+// @media (max-width: 979px) {
+//   body {
+//     padding-top: 0px;
+//   }
+// }
