--- a/app/views/memberships/_groups.html.erb
+++ b/app/views/memberships/_groups.html.erb
@@ -4,7 +4,7 @@
       <tr>
         <td>Name</td>
         <td>Description</td>
-        <td></td>
+        <td class='td-last'> Action </td>
       </tr>
     </thead>
 
@@ -13,7 +13,7 @@
         <tr id='membership-<%=membership.id%>'>
           <td><%= membership.group.name %></td>
           <td><%= truncate(membership.group.description) %></td>
-          <td><%= link_to 'Remove', membership_path(membership.id), class: 'remove-group', data: {id: membership.id } %></td>
+          <td><%= link_destroy ' ', membership_path(membership.id), class: 'remove-group', data: {id: membership.id } %></td>
         </tr>
       <% end %>
     </tbody>
