--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,23 +1,26 @@
-<%=simple_form_for(@user, html: { class: 'form-horizontal form'}) do |f| %>
-  <%= errors_for @user %>
+<%=simple_form_for(@user, html: { class: 'form-inline form'}) do |f| %>
+  <%#= errors_for @user %>
   <%=f.input :user_name, label: 'Login', input_html: {class: 'form-control'} %>
   <%=f.input :full_name, input_html: {class: 'form-control'} %>
   <%=f.input :email, input_html: {class: 'form-control'} %>
   <%=f.input :phone, label: 'Number', input_html: {class: 'form-control'} %>
-  <%=f.select :role, User.visible_roles, label: 'Role', input_html: {class: 'form-control'} %>
+  <%=f.input :role, collection:User.visible_roles, label: 'Role', input_html: {class: 'form-control'} %>
   
   <% if @user.new_record? %>
     <%=f.input :password, input_html: {class: 'form-control'} %>
     <%=f.input :password_confirmation, required: true, label: 'Confirm', input_html: {class: 'form-control'} %>
   <% end %>
 
-  <%=f.submit 'Save', class: 'btn btn-primary form-control' %>
+  <div class='form-group form-action-group'>
+    <label class='control-label'></label>
+    <%=f.submit 'Save', class: 'btn btn-primary' %>
 
-  <% if !@user.new_record? && @user != current_user  %>
-  <%= link_to "Reset password", reset_user_path(@user), 
-              :method => :put, 
-              :confirm => 'Are you sure to reset password for this user?' ,
-              :class => 'btn btn-primary form-control' %>
-  <%end %>
+    <% if !@user.new_record? && @user != current_user  %>
+    <%= link_to "Reset password", reset_user_path(@user), 
+                :method => :put, 
+                :confirm => 'Are you sure to reset password for this user?' ,
+                :class => 'btn btn-danger' %>
+    <%end %>
+  </div>
 
 <% end %>
