--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -90,3 +90,14 @@ label.inline {
 .td-last {
   width: 80px;
 }
+
+em.highlight {
+  background: yellow;
+}
+.feed-title {
+  font-size: 18px;
+  margin-top: 30px;
+}
+.page-viewer-border {
+  background: #fafafa;
+}
