--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,7 +1,11 @@
 <%= paginate_for(@alerts) %>
 
 <%= page_header "List Alert" do %>
-  <%= link_new 'New Alert', new_alert_path() %>
+  <%= link_to matched_alerts_path(), class: 'btn btn-default' do %>
+    <span class='glyphicon glyphicon-flash'> </span> Alert Content
+  <% end %>
+  <span> </span>
+  <%= link_new 'New Alert', new_alert_path(), class: 'btn btn-default' %>
 <% end %>
 
 
