--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -48,7 +48,7 @@
             <%= yield %>
 
             <!-- Callout Panel -->
-            <p class="callout">
+            <p class="callout" style='margin-top: 60px;' >
               This email is from <%=ENV['APP_NAME']%>
             </p><!-- /Callout Panel -->         
                         
@@ -77,7 +77,7 @@
         <tr>
           <td align="center">
             <p>
-              @Copyright <a href=''> InSTEDD Ilab</a>
+              @Copyright <a href='http://www.ilabsoutheastasia.org/'> InSTEDD Ilab South east asia</a>
             </p>
           </td>
         </tr>
