--- a/app/views/layouts/mailer/_contact.html.erb
+++ b/app/views/layouts/mailer/_contact.html.erb
@@ -3,13 +3,13 @@
     <td>
       <table align="left" class="column">
         <tr>
-          <td>        
+          <td>
             
             <h5 class="">Connect with Us:</h5>
             <p class="">
-              <a href="#" class="soc-btn fb">Facebook</a>
-              <a href="#" class="soc-btn tw">Twitter</a>
-              <a href="#" class="soc-btn gp">Google+</a>
+              <a href="https://www.facebook.com/iLabSEA" class="soc-btn fb">Facebook</a>
+              <a href="https://twitter.com/ilabsea" class="soc-btn tw">Twitter</a>
+              <a href="https://plus.google.com/106154230998667227350/posts" class="soc-btn gp">Google+</a>
             </p>
 
           </td>
@@ -23,7 +23,7 @@
             <h5 class="">Contact Info:</h5>
             <p>
               Phone: <strong>017 777457</strong><br/>
-              Email: <strong><a href="emailto:ilabphnompenh@instedd.org">ilabphnonpenh@instedd.org</a></strong>
+              Email: <strong><a href="emailto:ilabphnompenh@instedd.org">ilabphnompenh@instedd.org</a></strong>
             </p>
           </td>
         </tr>
